notification.yaml
###############################################################################
# 2) Deployment
###############################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification-container
          # Assumes you have a local Docker image named "notification"
          image: notification
          imagePullPolicy: Never
          ports:
            - containerPort: 5552

          # Pass extra param to load from /config/application.properties
          args:
            - "-Dspring.config.additional-location=file:/config/application.properties"
            - "-jar"
            # Make sure the path & name match your Docker image’s JAR
            - "/app/notification-service.jar"

          volumeMounts:
            - name: config-volume
              mountPath: /config
      volumes:
        - name: config-volume
          configMap:
            name: notification-config
---
###############################################################################
# 3) Service
###############################################################################
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification
  type: LoadBalancer
  ports:
    - name: http
      port: 5552
      targetPort: 5552
