rabitmq.yaml

# -------------------------------------
# RabbitMQ Deployment
# -------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:management-alpine
          ports:
            - name: amqp
              containerPort: 5672    # AMQP port
            - name: management
              containerPort: 15672  # Management UI port

---
# -------------------------------------
# RabbitMQ Service
# -------------------------------------
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  # 'ClusterIP' means only accessible within the cluster.
  # Change to 'NodePort' or 'LoadBalancer' to expose outside.
  type: 'LoadBalancer'
  selector:
    app: rabbitmq
  ports:
    # Map service port 4321 to container port 5672
    - name: amqp
      port: 4321
      targetPort: amqp
      protocol: TCP

    # Map service port 54321 to container port 15672
    - name: management
      port: 54321
      targetPort: management
      protocol: TCP
