user.yaml
###############################################################################
# 2) Deployment
###############################################################################
###############################################################################
# 2) Deployment
###############################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user-container
          # Your local image
          image: user
          imagePullPolicy: Never
          ports:
            - containerPort: 5550
          volumeMounts:
            - name: config-volume
              mountPath: /config  # so /config/application.properties is available
      volumes:
        - name: config-volume
          configMap:
            name: user-config  # references the ConfigMap with application.properties

---
###############################################################################
# 3) Service
###############################################################################
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user
  type: LoadBalancer
  ports:
    - name: http
      port: 5550
      targetPort: 5550
